# ikso100

./: DATASET_README.md  ENHANCED_COLLECTION_SUCCESS.md  MANUAL_COLLECTION_README.md  MANUAL_COLLECTION_V2_README.md  MJDATA.TXT  README.md  TRAJECTORY_DEMOS_README.md  UNIFIED_DATA_COLLECTION_README.md  VIDEO_CAPTURE_README.md  april.py  aruco_detection.py  calib.npz  calibrate.py  camera_params.json  cleanup_old_scripts.py  collect_dataset.py  inspect_dataset.py  main-keyboard.py  main-mouse.py  main.py  main_boundBox.py  mjpy-init.sh  mujoco_loop.py  pyproject.toml  scene.xml  so_arm100.xml  test_dataset.py  unified_data_collector.py  validate_lerobot_dataset.py
assets/: Cube.stl
datasets/so100_enhanced_trajectories/: meta.json
datasets/so100_enhanced_trajectories/data/: episode_000000.hdf5  episode_000002.hdf5  episode_000004.hdf5
datasets/so100_manual_dataset/: meta.json
datasets/so100_manual_dataset/data/: episode_000000.hdf5
datasets/so100_manual_dataset_v2/: meta.json
datasets/so100_manual_dataset_v2/data/: episode_000000.hdf5  episode_000001.hdf5  episode_000002.hdf5
datasets/so100_sim_dataset/: meta.json
datasets/so100_sim_dataset/data/: episode_000000.hdf5  episode_000001.hdf5  episode_000002.hdf5
datasets/so100_sim_dataset_with_video/: meta.json
datasets/so100_sim_dataset_with_video/data/: episode_000000.hdf5
datasets/so100_unified_dataset/: meta.json
datasets/so100_unified_dataset/data/: episode_000000.hdf5  episode_000001.hdf5  episode_000002.hdf5
